--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </div><br>
         <!--------------------Section---------------->
         <div id="over-section" class="content p-5 has-background-info">
-          <div class="columns is-multiline has-background-info-light">
+          <div class="columns is-multiline has-background-info">
 
             <div class="column is-one-third">
               <article class="card has-background-info" id="home">
@@ -241,7 +241,7 @@
             </div>
           </div>
 
-          <div class="columns has-background-info-light">
+          <div class="columns has-background-info">
             <div class="column">
               <article class="card has-background-info" id="home1">
                 <div class="card-content">
@@ -282,10 +282,10 @@
                     <div class="column m-1 center has-background-link">
                       <img src="./images/tracking.jpg" style="max-height: 100px">
                     </div>
-                    <div class="column m-1 center has-background-success">
+                    <div class="column m-1 center has-background-link">
                       <img src="./images/advantage.png" style="max-height: 100px">
                     </div>
-                    <div class="column m-1 center has-background-danger">
+                    <div class="column m-1 center has-background-link">
                       <img src="./images/feedback.png" style="max-height: 100px">
                     </div>
                   </div>
@@ -379,111 +379,109 @@
           </div>
         </div>
 
-        <div class="columns">
-          <div class="column is-half">
-            <article class="card has-background-info">
-              <div class="subtitle center">
-                <button
-                  class="button mt-2 is-dark">Agents Performances | Click Image To
-                  View</button>
-              </div>
+        <div class="container m-4">
+          <div class="columns">
+            <div class="column is-half">
+              <article class="card has-background-info">
+                <div class="subtitle center">
+                  <button class="button mt-2 is-dark">Agents Performances | Click Image To
+                    View</button>
+                </div>
 
-              <div class="w3-container">
-                <figure class="image is-2by1">
-                  <img src="./images/Dash1.png" style="width:100%;cursor:zoom-in"
-                    onclick="document.getElementById('modal01').style.display='block'">
-                </figure>
+                <div class="w3-container">
+                  <figure class="image is-2by1">
+                    <img src="./images/Dash1.png" style="width:100%;cursor:zoom-in"
+                      onclick="document.getElementById('modal01').style.display='block'">
+                  </figure>
 
-                <div id="modal01" class="w3-modal" onclick="this.style.display='none'">
-                  <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
-                  <div class="w3-modal-content w3-animate-zoom">
-                    <iframe width="900" height="650" class="is-fullwidth"
-                      src="https://datastudio.google.com/embed/reporting/55d26a2f-d344-4d37-a8fb-34c792c804d1/page/jKlQC"
-                      frameborder="0" style="border:0" allowfullscreen style="width:100%"></iframe>
+                  <div id="modal01" class="w3-modal" onclick="this.style.display='none'">
+                    <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
+                    <div class="w3-modal-content w3-animate-zoom">
+                      <iframe width="900" height="650" class="is-fullwidth"
+                        src="https://datastudio.google.com/embed/reporting/55d26a2f-d344-4d37-a8fb-34c792c804d1/page/jKlQC"
+                        frameborder="0" style="border:0" allowfullscreen style="width:100%"></iframe>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </article>
+              </article>
+            </div>
+
+            <div class="column is-half">
+              <article class="card has-background-info">
+                <div class="subtitle center">
+                  <button class="button mt-2 is-dark">Call Center Credits | Click Image To
+                    View</button>
+                </div>
+
+                <div class="w3-container">
+                  <figure class="image is-2by1">
+                    <img src="./images/Dash2.png" style="width:100%;cursor:zoom-in"
+                      onclick="document.getElementById('modal02').style.display='block'">
+                  </figure>
+
+                  <div id="modal02" class="w3-modal" onclick="this.style.display='none'">
+                    <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
+                    <div class="w3-modal-content w3-animate-zoom">
+                      <iframe width="900" height="650" class="is-fullwidth"
+                        src="https://datastudio.google.com/embed/reporting/2e1b5d10-d855-44b6-b498-953932a08a59/page/jKlQC"
+                        frameborder="0" style="border:0" allowfullscreen style="width:100%"></iframe>
+                    </div>
+                  </div>
+                </div>
+              </article>
+            </div>
           </div>
 
-          <div class="column is-half">
-            <article class="card has-background-info">
-              <div class="subtitle center">
-                <button
-                  class="button mt-2 is-dark">Call Center Credits | Click Image To
-                  View</button>
-              </div>
+          <div class="columns">
+            <div class="column is-half">
+              <article class="card has-background-info">
+                <div class="subtitle center">
+                  <button class="button mt-2 is-dark">Incomplete Calls | Click Image To
+                    View</button>
+                </div>
 
-              <div class="w3-container">
-                <figure class="image is-2by1">
-                  <img src="./images/Dash2.png" style="width:100%;cursor:zoom-in"
-                    onclick="document.getElementById('modal02').style.display='block'">
-                </figure>
+                <div class="w3-container">
+                  <figure class="image is-2by1">
+                    <img src="./images/Dash3.png" style="width:100%;cursor:zoom-in;"
+                      onclick="document.getElementById('modal03').style.display='block'">
+                  </figure>
 
-                <div id="modal02" class="w3-modal" onclick="this.style.display='none'">
-                  <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
-                  <div class="w3-modal-content w3-animate-zoom">
-                    <iframe width="900" height="650" class="is-fullwidth"
-                      src="https://datastudio.google.com/embed/reporting/2e1b5d10-d855-44b6-b498-953932a08a59/page/jKlQC"
-                      frameborder="0" style="border:0" allowfullscreen style="width:100%"></iframe>
+                  <div id="modal03" class="w3-modal" onclick="this.style.display='none'">
+                    <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
+                    <div class="w3-modal-content w3-animate-zoom">
+                      <iframe width="900" height="600" class="is-fullwidth"
+                        src="https://datastudio.google.com/embed/reporting/968349c2-602c-4f97-a6b4-01d1c181d151/page/RQUPC"
+                        frameborder="0" style="border:0" allowfullscreen style="width:100%"></iframe>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </article>
-          </div>
-        </div>
+              </article>
+            </div>
 
-        <div class="columns">
-          <div class="column is-half">
-            <article class="card has-background-info">
-              <div class="subtitle center">
-                <button
-                  class="button mt-2 is-dark">Incomplete Calls | Click Image To
-                  View</button>
-              </div>
+            <div class="column is-half">
+              <article class="card has-background-info">
+                <div class="subtitle center">
+                  <button class="button mt-2 is-dark">Warnings Tracker | Click Image To
+                    View</button>
+                </div>
 
-              <div class="w3-container">
-                <figure class="image is-2by1">
-                  <img src="./images/Dash3.png" style="width:100%;cursor:zoom-in;"
-                    onclick="document.getElementById('modal03').style.display='block'">
-                </figure>
+                <div class="w3-container">
+                  <figure class="image is-2by1">
+                    <img src="./images/Dash4.png" style="width:100%;cursor:zoom-in"
+                      onclick="document.getElementById('modal04').style.display='block'">
+                  </figure>
 
-                <div id="modal03" class="w3-modal" onclick="this.style.display='none'">
-                  <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
-                  <div class="w3-modal-content w3-animate-zoom">
-                    <iframe width="900" height="600" class="is-fullwidth"
-                      src="https://datastudio.google.com/embed/reporting/968349c2-602c-4f97-a6b4-01d1c181d151/page/RQUPC"
-                      frameborder="0" style="border:0" allowfullscreen style="width:100%"></iframe>
+                  <div id="modal04" class="w3-modal" onclick="this.style.display='none'">
+                    <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
+                    <div class="w3-modal-content w3-animate-zoom">
+                      <iframe width="900" height="600" class="is-fullwidth"
+                        src="https://datastudio.google.com/embed/reporting/87519d28-32cd-4408-813d-058e8ddd3887/page/hQAwB"
+                        frameborder="0" style="border:0" allowfullscreen style="width:100%"></iframe>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </article>
-          </div>
-
-          <div class="column is-half">
-            <article class="card has-background-info">
-              <div class="subtitle center">
-                <button
-                  class="button mt-2 is-dark">Warnings Tracker | Click Image To
-                  View</button>
-              </div>
-
-              <div class="w3-container">
-                <figure class="image is-2by1">
-                  <img src="./images/Dash4.png" style="width:100%;cursor:zoom-in"
-                    onclick="document.getElementById('modal04').style.display='block'">
-                </figure>
-
-                <div id="modal04" class="w3-modal" onclick="this.style.display='none'">
-                  <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
-                  <div class="w3-modal-content w3-animate-zoom">
-                    <iframe width="900" height="600" class="is-fullwidth"
-                      src="https://datastudio.google.com/embed/reporting/87519d28-32cd-4408-813d-058e8ddd3887/page/hQAwB"
-                      frameborder="0" style="border:0" allowfullscreen style="width:100%"></iframe>
-                  </div>
-                </div>
-              </div>
-            </article>
+              </article>
+            </div>
           </div>
         </div>
 
