--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav class="navbar">
         <div class="container">
           <div class="navbar-brand">
-            <span  id="logo" class="navbar-item">
+            <span  class="navbar-item">
               <a href="https://sands-45.github.io/dialndine-homepage/" target="_blank"
                 class="button has-text-white is-size-4 is-inverted has-background-info-dark">
                 <span class="icon">
@@ -295,16 +295,13 @@
 
         </div>
 
-
-
-      </div>
     </div>
   </div>
   <!----------End of Overview------------->
 
   <div id="perf" class="content-tab" style="display: none">
 
-    <div class="section has-background-info">
+    <div class="container has-background-info">
       <div class="message is-info">
         <div class="message-header">
           <h2 class="title center has-text-white pb-2"><i class="fas fa-chart-area"></i>Performances</h2>
