--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 	<section id="menu" class="hero call-home is-info is-halfheight">
-		<div class="hero-head has-background-info-dark">
+		<div  id="back-to-top"  class="hero-head has-background-info-dark">
 			<nav class="navbar">
 				<div class="container">
 					<div class="navbar-brand">
@@ -50,7 +50,7 @@
 			</nav>
 		</div>
 
-		<div id="back-to-top" class="hero-body">
+		<div class="hero-body">
 			<div class="container has-text-centered">
 				<p class="title is-1">
 					Call Center Services
