--- a/index.html
+++ b/index.html
@@ -35,15 +35,17 @@
 					</div>
 					<div id="navbarMenuHeroB" class="navbar-menu">
 						<div class="navbar-end">
-							<p class="navbar-item"> Are You A Member ?</p>
-							<span class="navbar-item">
-								<a href="./office.html" target="_blank" class="button is-info is-inverted">
-									<span class="icon">
-										<i class="fas fa-sign-in-alt"></i>
-									</span>
-									<span>Sign-In</span>
-								</a>
-							</span>
+							<div class="navbar-item has-dropdown is-hoverable">
+								<p class="navbar-item is-active"> Are You A Member ?</p>
+								<span class="navbar-item">
+									<a href="./office.html" target="_blank" class="button is-info is-inverted">
+										<span class="icon">
+											<i class="fas fa-sign-in-alt"></i>
+										</span>
+										<span>Sign-In</span>
+									</a>
+								</span>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -129,23 +131,23 @@
 			<div class="notification has-background-info-dark mt-3">
 
 				<div class="columns">
-					<div class="column pt-5 is-half ">
+					<div class="column is-half ">
 						<div class="notification center about has-background-info-light">
-							<div class="columns  top-section  center">
+							<div class="columns  top-section ">
 
-								<div class="column is-one-third">
+								<div class="column">
 									<figure class="image m-0">
 										<img class=" ml-1 our-service" src="./images/out-services3.png">
 									</figure>
 								</div>
 
-								<div class="column is-one-third">
-									<figure class="image m-0">
+								<div class="column">
+									<figure style="height: 100%;" class="image m-0">
 										<img class=" ml-1 our-service" src="./images/scooter.png">
 									</figure>
 								</div>
 
-								<div class="column is-one-third">
+								<div class="column">
 									<figure class="image  m-0">
 										<img class=" ml-1 our-service" src="./images/deilivery.png">
 									</figure>
@@ -157,18 +159,13 @@
 
 					<div class="column m-0 is half has-text-white">
 						<h2>Our Services</h2>
-						<p>Our call center services will help you drive sales, boost customer satisfaction, grow your
+						<p class="is-7">Our call center services will help you drive sales, boost customer satisfaction,
+							grow your
 							business and extend your operating hours. The possibilities are limitless. Get in touch with
 							our experts today to hear how we can help your business reach the next level with our call
 							center solutions.Our call center services will help you drive sales, boost customer
 							satisfaction, grow your business and extend your operating hours. The possibilities are
 							limitless. Get in touch with our experts today to hear how we can help your business reach
-							the next level with our call center solutions.>Our call center services will help you drive
-							sales, boost customer satisfaction, grow your business and extend your operating hours. The
-							possibilities are limitless. Get in touch with our experts today to hear how we can help
-							your business reach the next level with our call center solutions.Our call center services
-							will help you drive sales, boost customer satisfaction, grow your business and extend your
-							operating hours.
 
 						</p><br>
 
@@ -259,9 +256,9 @@
 				</div>
 
 				<section class="section">
-					<div id="about" class="container is-fluid center about1">
+					<div id="about" class="container is-fluid about1">
 						<div class="notification about-section has-text-white">
-							<h1 class="title">About</h1>
+							<h1 class="title center">About</h1>
 							<p>Dial n Dine is a national call centre geared to meet the online/telephonic ordering and
 								customer-engagement needs of retail food both on delivery and on collection.The main
 								focus of
