--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 		<div id="back-to-top" class="hero-body">
 			<div class="container has-text-centered">
-				<p class="title is-1">
+				<p class="title intro is-1">
 					Call Center Services
 				</p>
 				<p class="subtitle is-5">
