--- a/office.html
+++ b/office.html
@@ -54,7 +54,7 @@
 
     <div id="back-to-top" class="hero-body">
       <div class="container has-text-centered">
-        <p class="title">Our Cloud Office</p>
+        <p class="title intro">Our Cloud Office</p>
         <p class="subtitle is-size-6"><i>"The art of Performance"</i></p>
       </div>
     </div>
