--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								<span>Dial n' Dine</span>
 							</a>
 						</span>
-						<span class="navbar-burger" data-target="navbarMenuHeroB">
+						<span class="navbar-burger has-text-white" data-target="navbarMenuHeroB">
 							<span></span>
 							<span></span>
 							<span></span>
