--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<section id="menu" class="hero call-home is-info is-halfheight">
+	<section id="menu" class="hero has-background-info-dark call-home is-info is-halfheight">
 		<div id="back-to-top" class="hero-head has-background-info-dark">
 			<nav class="navbar">
 				<div class="container">
@@ -52,44 +52,54 @@
 			</nav>
 		</div>
 
-		<div id="back-to-top" class="hero-body">
-			<div class="container has-text-centered">
-				<p class="title intro is-1">
-					Call Center Services
-				</p>
-				<p class="subtitle is-5">
-					<small>BOOST SALES. ENHANCE CUSTOMER SERVICE. GROW YOUR BUSINESS.</small>
-				</p>
-			</div>
-		</div>
+		<div class="hero-wave">
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+				<path fill="#1c73aa" fill-opacity="1"
+					d="M0,192L60,192C120,192,240,192,360,181.3C480,171,600,149,720,144C840,139,960,149,1080,149.3C1200,149,1320,139,1380,133.3L1440,128L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
+				</path>
+			</svg>
 
-		<div class="hero-foot has-background-info-dark">
-			<nav class="tabs is-boxed is-centered">
-				<div class="container">
-					<ul>
-						<li>
-							<a>Home</a>
-						</li>|
-						<li>
-							<a href="#services">Our Services</a>
-						</li>|
-						<li>
-							<a href="#about">About</a>
-						</li>|
-						<li>
-							<a href="#testimon">What Others Say</a>
-						</li>|
-						<li>
-							<a href="#partners">Partners</a>
-						</li>|
-						<li>
-							<a href="#partners">Contact Us</a>
-						</li>
-					</ul>
+			<div class="hero-child">
+				<div class="hero-body">
+					<div class="container has-text-dark has-text-centered">
+						<p class="title intro is-1 has-text-dark">
+							Call Center Services
+						</p>
+						<p class="subtitle is-5  has-text-dark">
+							<small>BOOST SALES. ENHANCE CUSTOMER SERVICE. GROW YOUR BUSINESS.</small>
+						</p>
+					</div>
 				</div>
-			</nav>
-		</div>
+
+				<div class="hero-foot has-background-info-dark">
+					<nav class="tabs is-boxed is-centered">
+						<div class="container">
+							<ul>
+								<li>
+									<a>Home</a>
+								</li>|
+								<li>
+									<a href="#services">Our Services</a>
+								</li>|
+								<li>
+									<a href="#about">About</a>
+								</li>|
+								<li>
+									<a href="#testimon">What Others Say</a>
+								</li>|
+								<li>
+									<a href="#partners">Partners</a>
+								</li>|
+								<li>
+									<a href="#partners">Contact Us</a>
+								</li>
+							</ul>
+						</div>
+					</nav>
+				</div>
+			</div>
 	</section>
+	</div>
 	<!------------End  of Menu----------------->
 	<section class="section body">
 		<div class="welcome center m-1">
