--- a/index.html
+++ b/index.html
@@ -105,15 +105,16 @@
 		<div class="welcome center m-1">
 			<div class="notification welcome  has-text-dark">
 				<div class="message-header has-background-info-dark">
-					<h2 class="title center logo-title pb-2">
-						Welcome To Dial & Dine&nbsp;<img class="logo center" src="./images/Dial n Dine Logo.png"
-							alt="logo" style="max-width: 50px;">
+					<h2 class="title center logo-title pb-2"><i class="fas fa-chalkboard-teacher"></i>&nbsp;Welcome To
+						Dial & Dine&nbsp;<img class="logo center" src="./images/Dial n Dine Logo.png" alt="logo"
+							style="max-width: 50px;">
 					</h2>
 				</div>
 
 				<div class="columns is-fluid">
 					<div class="column is-half">
-						<h1 class="title is-4  has-text-dark">Expert Call Center Services</h1>
+						<h1 class="title is-4  has-text-dark"><i class="fas fa-headset"></i>&nbsp;Expert Call Center
+							Services</h1>
 						<p>Our call center services will help you drive sales, boost customer satisfaction, grow
 							your business and extend your operating hours. The possibilities are limitless. Get in
 							touch with our experts today to hear how we can help your business reach the next level
@@ -124,7 +125,8 @@
 					</div>
 
 					<div class="column is-half">
-						<h1 class="title is-4 has-text-dark">Benefits of Telesales</h1>
+						<h1 class="title is-4 has-text-dark"><i class="fas fa-coins"></i>&nbsp;Benefits of Telesales
+						</h1>
 						<p>Inbound and outbound call centres gives your organisation the leg up on competition.
 							Telesales are in the fantastic position of generating leads as well as setting up
 							appointments so that sales executives can close deals faster. This simple yet effective
@@ -136,13 +138,13 @@
 
 			</div>
 		</div>
-
+		<!--------------------------End of Welcome----------------------------------->
 		<div id="services" class="container is-fluid center">
 			<div class="notification has-background-info-dark mt-3">
 
 				<div class="columns">
 					<div class="column is-half ">
-						<div class="notification center about has-background-info-light">
+						<div class="notification center  sec-color about has-background-info-light">
 							<div class="columns  top-section ">
 
 								<div class="column">
@@ -185,7 +187,7 @@
 				<div class="columns is-multiline">
 
 					<div class="column is-one-quater center">
-						<div class="card service top-section has-background-info-light has-text-dark">
+						<div class="card service top-section  sec-color has-background-info-light has-text-dark">
 							<header class="card-header">
 								<p class="card-header-title center">
 									<i class="fas fa-users"></i>&nbsp;CLIENT CARE
@@ -205,7 +207,7 @@
 					</div>
 
 					<div class="column is-one-quater center">
-						<div class="card service top-section has-background-info-light has-text-dark">
+						<div class="card service top-section  sec-color has-background-info-light has-text-dark">
 							<header class="card-header">
 								<p class="card-header-title center">
 									<i class="fas fa-tty"></i>&nbsp;TELESALES
@@ -225,7 +227,7 @@
 					</div>
 
 					<div class="column is-one-quater center">
-						<div class="card service top-section has-background-info-light has-text-dark">
+						<div class="card service top-section  sec-color has-background-info-light has-text-dark">
 							<header class="card-header">
 								<p class="card-header-title center">
 									<i class="fas fa-question-circle"></i>&nbsp;INCIDENTS MANAGEMENT
@@ -245,13 +247,13 @@
 					</div>
 
 					<div class="column is-one-quater center">
-						<div class="card service top-section has-background-info-light has-text-dark">
+						<div class="card service top-section sec-color has-background-info-light has-text-dark">
 							<header class="card-header">
 								<p class="card-header-title center">
 									<i class="fas fa-chart-line"></i>&nbsp;PERFORMANCE MANAGEMENT
 								</p>
 							</header>
-							<div class="card-content">
+							<div class="card-content ">
 								<div class="content">
 									From infrastructure to management to monthly reporting.
 									We'll ensure any type of service failure is managed to get the best possible
@@ -264,11 +266,12 @@
 						</div>
 					</div>
 				</div>
-
+				<!-----------------------------------End of Services-------------------------------->
 				<section class="section">
 					<div id="about" class="container is-fluid about1">
 						<div class="notification about-section has-text-white">
-							<h1 class="title center">About</h1>
+							<h1 class="title has-text-white is-3 center has-text-weight-bold"><i
+									class="fas fa-building"></i>&nbsp;About</h1>
 							<p>Dial n Dine is a national call centre geared to meet the online/telephonic ordering and
 								customer-engagement needs of retail food both on delivery and on collection.The main
 								focus of
@@ -286,19 +289,18 @@
 			</div>
 		</div>
 
-
+		<!------------------------------Tesimonials-------------------------------->
 		<section class="section">
 			<div id="testimon" class="container testinimon is-fluid pt-3 ">
 
 				<div class="message-header m-5  has-background-info-dark">
-					<h2 class="title center has-text-white logo-title pb-2"><i
-							class="fas fa-comment-alt"></i>&nbsp;Testimonials
-					</h2>
+					<h1 class="title has-text-white is-3 center has-text-weight-bold"><i
+							class="fas fa-comment-alt"></i>&nbsp;Testimonials</h1>
 				</div>
 
 				<div class="columns is-multline pl-5 pr-5">
 					<div class="column is-one-quater">
-						<div class="box has-background-info-light has-text-grey-dark">
+						<div class="box has-background-info-light sec-color has-text-grey-dark">
 							<p>
 								<span class="font-bold has-text-primary is-size-5">
 									“
@@ -330,7 +332,7 @@
 					</div>
 
 					<div class="column is-one-quater">
-						<div class="box has-background-info-light has-text-grey-dark">
+						<div class="box has-background-info-light  sec-color has-text-grey-dark">
 							<p>
 								<span class="font-bold has-text-primary is-size-5">
 									“
@@ -362,7 +364,7 @@
 					</div>
 
 					<div class="column is-one-quater">
-						<div class="box has-background-info-light has-text-grey-dark">
+						<div class="box has-background-info-light  sec-color has-text-grey-dark">
 							<p>
 								<span class="font-bold has-text-primary is-size-5">
 									“
@@ -394,7 +396,7 @@
 					</div>
 
 					<div class="column is-one-quater">
-						<div class="box has-background-info-light has-text-grey-dark">
+						<div class="box has-background-info-light  sec-color has-text-grey-dark">
 							<p>
 								<span class="font-bold has-text-primary is-size-5">
 									“
@@ -492,7 +494,7 @@
 									<textarea name="message" id="message" rows="2" class="textarea is-medium"
 										placeholder="Message" style="resize: none;"></textarea>
 								</div>
-								<button class="button center is-link">Submit</button>
+								<button class="button center has-background-dark has-text-white">Submit</button>
 							</form>
 						</div>
 					</div>
