--- a/office.html
+++ b/office.html
@@ -497,9 +497,9 @@
                   </figure>
 
                   <div id="modal06" class="w3-modal" onclick="this.style.display='none'">
-                    <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
-                    <div class="w3-modal-content w3-animate-zoom">
-                      <iframe width="100%" height="600" class="is-fullwidth"
+                    <span class="w3-button has-background-info w3-hover-red w3-xlarge w3-display-topright">&times;</span>
+                    <div  class="w3-modal-content w3-animate-zoom">
+                      <iframe width="120%" height="600" class="is-fullwidth"
                         src="https://datastudio.google.com/embed/reporting/c5071f7b-23ac-4a94-9856-5ea7547f1dff/page/jKlQC"
                         frameborder="0" style="border:0" allowfullscreen style="width:100%"></iframe>
                     </div>
