--- a/office.html
+++ b/office.html
@@ -392,9 +392,10 @@
                   </figure>
 
                   <div id="modal01" class="w3-modal" onclick="this.style.display='none'">
-                    <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
-                    <div class="w3-modal-content w3-animate-zoom">
-                      <iframe width="100%" height="650" class="is-fullwidth"
+                    <span
+                      class="w3-button  has-background-info w3-hover-red w3-xlarge w3-display-topright">&times;</span>
+                    <div style="width: 87%; height: 90%;" class="w3-modal-content center w3-animate-zoom">
+                      <iframe width="100%" height="100%" class="is-fullwidth"
                         src="https://datastudio.google.com/embed/reporting/55d26a2f-d344-4d37-a8fb-34c792c804d1/page/jKlQC"
                         frameborder="0" style="border:0" allowfullscreen style="width:100%"></iframe>
                     </div>
@@ -417,9 +418,10 @@
                   </figure>
 
                   <div id="modal02" class="w3-modal" onclick="this.style.display='none'">
-                    <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
-                    <div class="w3-modal-content w3-animate-zoom">
-                      <iframe width="100%" height="650" class="is-fullwidth"
+                    <span
+                      class="w3-button has-background-info w3-hover-red w3-xlarge w3-display-topright">&times;</span>
+                    <div style="width: 87%; height: 90%;" class="w3-modal-content center w3-animate-zoom">
+                      <iframe width="100%" height="100%" class="is-fullwidth"
                         src="https://datastudio.google.com/embed/reporting/2e1b5d10-d855-44b6-b498-953932a08a59/page/jKlQC"
                         frameborder="0" style="border:0" allowfullscreen style="width:100%"></iframe>
                     </div>
@@ -434,7 +436,7 @@
             <div class="column is-half">
               <article class="card has-background-info">
                 <div class="subtitle center">
-                  <button class="button mt-2 is-dark">Incomplete Calls | Click Image To
+                  <button class="button mt-2 is-dark">Incomplete Calls & Queries | Click Image To
                     View</button>
                 </div>
 
@@ -445,10 +447,11 @@
                   </figure>
 
                   <div id="modal03" class="w3-modal" onclick="this.style.display='none'">
-                    <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
-                    <div class="w3-modal-content w3-animate-zoom">
-                      <iframe width="100%" height="600" class="is-fullwidth"
-                        src="https://datastudio.google.com/embed/reporting/968349c2-602c-4f97-a6b4-01d1c181d151/page/RQUPC"
+                    <span
+                      class="w3-button has-background-info w3-hover-red w3-xlarge w3-display-topright">&times;</span>
+                    <div style="width: 87%; height: 90%;" class="w3-modal-content center w3-animate-zoom">
+                      <iframe width="100%" height="100%" class="is-fullwidth"
+                        src="https://datastudio.google.com/embed/reporting/49454e7b-3ef0-4d81-9d68-70a2d118fdf4/page/jKlQC"
                         frameborder="0" style="border:0" allowfullscreen style="width:100%"></iframe>
                     </div>
                   </div>
@@ -456,33 +459,6 @@
               </article>
             </div>
 
-            <div class="column is-half">
-              <article class="card has-background-info">
-                <div class="subtitle center">
-                  <button class="button mt-2 is-dark">Warnings Tracker | Click Image To
-                    View</button>
-                </div>
-
-                <div class="w3-container">
-                  <figure class="image is-2by1">
-                    <img src="./images/Dash4.png" style="width:100%;cursor:zoom-in"
-                      onclick="document.getElementById('modal04').style.display='block'">
-                  </figure>
-
-                  <div id="modal04" class="w3-modal" onclick="this.style.display='none'">
-                    <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
-                    <div class="w3-modal-content w3-animate-zoom">
-                      <iframe width="100%" height="600" class="is-fullwidth"
-                        src="https://datastudio.google.com/embed/reporting/87519d28-32cd-4408-813d-058e8ddd3887/page/hQAwB"
-                        frameborder="0" style="border:0" allowfullscreen style="width:100%"></iframe>
-                    </div>
-                  </div>
-                </div>
-              </article>
-            </div>
-          </div>
-          <!---------------------------columns 3----------------------------->
-          <div class="columns">
             <div class="column is-half">
               <article class="card has-background-info">
                 <div class="subtitle center">
@@ -492,11 +468,11 @@
 
                 <div class="w3-container">
                   <figure class="image is-2by1">
-                    <img src="./images/Dash6.png" style="width:100%;cursor:zoom-in;"
-                      onclick="document.getElementById('modal06').style.display='block'">
+                    <img src="./images/Dash4.png" style="width:100%;cursor:zoom-in;"
+                      onclick="document.getElementById('modal04').style.display='block'">
                   </figure>
 
-                  <div id="modal06" class="w3-modal" onclick="this.style.display='none'">
+                  <div id="modal04" class="w3-modal" onclick="this.style.display='none'">
                     <span
                       class="w3-button has-background-info w3-hover-red w3-xlarge w3-display-topright">&times;</span>
                     <div style="width: 87%; height: 90%;" class="w3-modal-content center w3-animate-zoom">
@@ -508,32 +484,8 @@
                 </div>
               </article>
             </div>
-
-            <div class="column is-half">
-              <article class="card has-background-info">
-                <div class="subtitle center">
-                  <button class="button mt-2 is-dark">Queries Report | Click Image To
-                    View</button>
-                </div>
-
-                <div class="w3-container">
-                  <figure class="image is-2by1">
-                    <img src="./images/Dash7.png" style="width:100%;cursor:zoom-in"
-                      onclick="document.getElementById('modal07').style.display='block'">
-                  </figure>
-
-                  <div id="modal07" class="w3-modal" onclick="this.style.display='none'">
-                    <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
-                    <div class="w3-modal-content w3-animate-zoom">
-                      <iframe width="100%" height="600" class="is-fullwidth"
-                        src="https://datastudio.google.com/embed/reporting/49454e7b-3ef0-4d81-9d68-70a2d118fdf4/page/jKlQC"
-                        frameborder="0" style="border:0" allowfullscreen style="width:100%"></iframe>
-                    </div>
-                  </div>
-                </div>
-              </article>
-            </div>
           </div>
+
         </div>
       </div>
 
@@ -564,32 +516,6 @@
         <div class="columns">
 
           <div class="column has-background-info">
-
-            <!-- Main container -->
-            <nav class="level is-size-7">
-              <!-- Left side -->
-              <div class="level-left">
-                <div class="level-item">
-                  <div class="field has-addons">
-                    <p class="control">
-                      <input class="input is-small" type="text" placeholder="Find  project">
-                    </p>
-                    <p class="control">
-                      <button class="button is-small">
-                        Search
-                      </button>
-                    </p>
-                  </div>
-
-                </div>
-              </div>
-
-              <!-- Right side -->
-              <div class="level-right">
-                <p class="level-item"><a class="button is-success">New</a></p>
-              </div>
-            </nav>
-
 
             <div class="columns">
               <div class="column is-half">
@@ -1060,7 +986,7 @@
                 </figure>
 
                 <div id="modal05" class="w3-modal" onclick="this.style.display='none'">
-                  <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
+                  <span class="w3-button has-background-info w3-hover-red w3-xlarge w3-display-topright">&times;</span>
                   <div class="w3-modal-content w3-animate-zoom">
                     <iframe width="100%" height="650" class="is-fullwidth"
                       src="https://datastudio.google.com/embed/reporting/6960b1f2-db1f-4f65-8491-51684dca0423/page/95gGC"
@@ -1092,7 +1018,7 @@
     </div>
     <!-----------------------End of Schedules--------------------------->
     <div id="news" class="content-tab has-background-info-light" style="display: none">
-      <div class="message-header">
+      <div class="message-header has-background-info">
         <h2 class="title center has-text-white pb-2"><i class="far fa-newspaper"></i>&nbsp;Newsletter</h2>
       </div>
 
@@ -1163,8 +1089,8 @@
   <!--------------------------------------------Footer          -->
   <div class="partners-footer" style="border-top:solid 2px grey;">
 
-    <button id="top" class="button center"><a href="#back-to-top"><i
-          class="far fa-arrow-alt-circle-up"></i></a></button>
+    <a href="#back-to-top"><button id="top" class="button center"><i
+          class="far fa-arrow-alt-circle-up"></i></button></a>
 
     <footer class="footer has-text-dark">
       <div class="container">
