--- a/index.html
+++ b/index.html
@@ -584,8 +584,8 @@
 		</svg>
 	</div>
 
-	<button id="top" class="button center"><a href="#back-to-top"><i
-				class="far fa-arrow-alt-circle-up"></i></a></button>
+	<a href="#back-to-top"><button id="top" class="button center"><i
+				class="far fa-arrow-alt-circle-up"></i></button></a>
 	<!-------------End of Page----------------->
 	<script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-a11y="true"></script>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
